# grpe

./: Cargo.toml  README.md  run
examples/: plane.rs  spiral.rs
src/: arg.rs  lib.rs  main.rs  model.rs  state.rs
src/model/: cube.rs  mod.rs  plane.rs  plane_old.rs  spiral.rs  star.rs  test.rs
